# play-position

./: .env.example  .gitignore  README.md  app.config.ts  firebase.json  index.js  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: firebase-hosting-merge.yml  firebase-hosting-pull-request.yml
app/: +not-found.tsx  _layout.tsx  login.tsx  register.tsx
app/(app)/: _layout.tsx  index.tsx  profile.tsx
backend/: .gitignore  README.md  full-schema.sql  pyproject.toml
backend/api/v1/: app.py
backend/api/v1/middlewares/: cors.py
backend/api/v1/views/: index.py  users.py
backend/core/: config.py  deps.py  events.py  logger.py
backend/schemas/: profile.py
components/: GameCard.tsx  HeaderRight.tsx  JoinGameCard.tsx  OAuthButtons.tsx  ThemeToggle.tsx
components/deprecated-ui/: bottom-sheet.tsx  button.tsx
components/ui/: card.tsx  form.tsx  radio-group.tsx  select.tsx  timeinput.tsx
frontend/: .env  .eslintrc.js  .firebaserc  .gitignore  README.md  app.json  babel.config.js  global.css  index.js  package.json  pnpm-lock.yaml  postcss.config.js  shims.ts
frontend/app/: +not-found.tsx  _layout.tsx  login.tsx  register.tsx
frontend/components/: HeaderRight.tsx  JoinGameCard.tsx  LanguageButtons.tsx  OAuthButtons.tsx  ThemeToggle.tsx
frontend/hooks/: useAuth.ts  useGeoLocation.ts  useToast.ts
frontend/i18n/: index.ts
frontend/lib/: constants.ts  supabase.ts  utils.ts
hooks/: useAxios.ts  useOnlineManager.ts
lib/: constants.ts  geoloc.ts  utils.ts
providers/: Auth.tsx  GeoLocation.tsx
types/: AuthContext.ts  supabase.ts
(+67 files in other folders)
